fix the padding issue on small screens

--- a/css/styles.css
+++ b/css/styles.css
@@ -67,7 +67,13 @@ h2, h3, h4, h5, h6 {
 }
 
 .row {
-  padding: 5% 10%;
+  padding: 0% 10%;
+}
+
+@media (max-width: 978px) {
+  .row {
+    padding: 10% 10%;
+  }
 }
 
 .btn {
